--- a/main.ipynb
+++ b/main.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "5300e605",
+   "metadata": {},
+   "source": [
+    "## github\n",
+    "https://github.com/saugatshakya/predicting_car_price\n",
+    "\n",
+    "## live demo\n",
+    "https://carprice-predict.ambitiousisland-1be3b1ed.southeastasia.azurecontainerapps.io/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 689,
    "id": "0c2764e3",
